--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -13,8 +13,7 @@
     <storage android:mountPoint="/storage/sdcard1"
 	android:storageDescription="@string/storage_sd_card"
 	android:primary="false"
-	android:removable="true"
-	android:allowMassStorage="true" />
+	android:removable="true" />
 
     <!-- USB OTG drive -->
     <storage android:mountPoint="/storage/usbdisk0"
